# BCS-FCUP

Algorithm Design and Analysis/Exercises/: code1.java  code10.java  code11.java  code12.java  code13.java  code14.java  code15.java  code16.java  code17.java  code18.java  code19.java  code2.java  code20.java  code21.java  code22.java  code23.java  code24.java  code25.java  code26.java  code27.java  code28.java  code29.java  code3.java  code30.java  code31.java  code32.java  code33.java  code34.java  code35.java  code36.java  code37.java  code38.java  code4.java  code5.java  code6.java  code7.java  code8.java  code9.java
Artificial Intelligence/Project 1/: exemple.txt  exercise2a.java  exercise2b.java
Artificial Intelligence/Project 2/: project2.py
Artificial Intelligence/Project 3/: dfs.py  idfs.py  node.py
Artificial Intelligence/Project 4/: alphabeta.py  minimax.py  utils.py
Artificial Intelligence/Project 5/: id3.py  restaurant.csv  test.py  utils.py
Compilers/: AST.hs  IR.hs  Main.hi  Parser.info  Parser.y  test.txt
Compilers/Exercises/Exercise 1/: interpretador.cabal
Compilers/Exercises/Exercise 1/dist-newstyle/cache/: config
Compilers/Exercises/Exercise 1/src/: Interpreter.hs
Compilers/Exercises/Exercise 3/: parser.cabal
Compilers/Exercises/Exercise 3/src/: Lexer.x  Main.hs  Parser.hs  Tests.hs
Compilers/Exercises/Exercise 4/: calc.cabal
Compilers/Exercises/Exercise 4/src/: Lexer.hs  Lexer.x  Parser.y  README.md
Compilers/Project/: Ast.hi  CodeGen.hi  CodeGen.hs  IR.hi  Lexer.hi  Lexer.hs  Lexer.x  Main  Main.hs  Parser.hi  Parser.hs
Computer Architecture/Exercises/: code1.out  code2.asm  code4.asm  code5.c  code5.i  code6.c  code6.i  code6.out  code6.s  code7.c  code7.i  code7.out  code7.s  code7.sout
Computer Laboratory/Tasks/: code1.c  code11.c  code12.c  code3.c  code4.c  code6.c  code7.c  code9.c
Computers Lab/: alpha.c  cut.c  normalizered.c  rotate90right.c  rotatevertically.c
Concurrent Computing/Project 2/: HSet1.java  HSet2.java
Concurrent Programming/Exercises/: code1.java  code10.java  code11.java  code12.java  code13.java  (+16 more)
Logic Computing/: binarytrees.pl  matrix.pl
Multimedia Systems/: game.py
Operating Systems/: exercise1.c  exercise2.c
(+271 files in other folders)
