
name:                interpretador
version:             0.1.0.0
synopsis:            Execícios de Compiladores (CC3001)
description:         Interpretador funcional de programas sequênciais
license:             BSD3
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10
                     
executable runtests
  main-is:             Main.hs
  other-modules:       Interpreter, Tests
  other-extensions:    TemplateHaskell
  build-depends:       base, containers, unordered-containers, QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010
