
name:                calc
version:             0.1.0.0
synopsis:            Calculadora simples
description:         Calculadora simples
author:              O seu nome
maintainer:          o-seu-email@fc.up.pt
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable calc
  main-is:             Main.hs
  other-modules:       Lexer, Parser
  build-tools:         alex, happy
  build-depends:       base, array
  hs-source-dirs:      src
  default-language:    Haskell2010
